<resources>
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_enter_password">*Please Enter Password</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="password_should_be_7_character_long">Password Should be 7 Character Long</string>
</resources>